--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -1,8 +1,11 @@
 <div class="navigation">
     <div class="navigation-header">
         <h3 class="navigation-title">Messenger</h3>
-        
     </div>
+    
+            <button class="btn-new" type="button" >Create room</button>
+
+<!--
     <h3 class="modal-title">Login</h3>
         <input placeholder="Enter a username" type="text">   
     
@@ -32,6 +35,7 @@
     </div>
             <button type="button" class="new-room" >New Room</button>
 </section>
+-->
 
 <div class="chatbox">
 
