bug fixing modal directive

--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -3,7 +3,11 @@
         <h3 class="navigation-title">Messenger</h3>
     </div>
     
-            <button class="btn-new" type="button" >Create room</button>
+            <button class="btn-new" type="button" ng-click="room.newRoom()" >Add room</button>
+    
+    
+ 
+
 
 <!--
     <h3 class="modal-title">Login</h3>
