--- a/app/styles/messenger.css
+++ b/app/styles/messenger.css
@@ -1,68 +1,67 @@
 .navigation {
-    border-style: double;
-    border-color: darkslategrey;
-    font-family: monospace;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 18%;
-    height: 100%;
-    background-color: rgb(148, 247, 150)
-    z-index: 1;
-    padding-left: 10px;
-    
-}
-
-.navigation .room-name:hover {
-    cursor: pointer;
-}
-
-.navigantion .new-room {
-    display: inline-block;
-   
-}
-
-.navigation-header {
-    display: inline-block;
-}
-
-.btn {
-position: relative;
-left: 0px;
-
-}
-
-
-
-.modal-footer {
-    display: relative;
-    top:400px;
-    left:0;
-}
-
-.modal-box {
-position: absolute;
-bottom:250px;
-/*background-color: aqua;*/
-left:10px;
-}
-
-
-.chatbox{
-    position: absolute;
-    bottom:300px;
-    left:30px;
-    font-size: 2rem;
-/*    width: 10%;*/
-    height: 150px;
-    color: black;
-/*    background-color: aqua;*/
-  
-}
-
-.modal {
-    margin-top: 10px;
-    background-color:#939eff;
-}
-
+     border-style: double;
+     border-color: darkslategrey;
+     font-family: monospace;
+     position: fixed;
+     top: 0px;
+     left: 0px;
+     width: 18%;
+     height: 100%;
+     background-color: rgb(148, 247, 150)
+     z-index: 1;
+     padding: 10px;
+ }
+ 
+ .navigation .room-name:hover {
+     cursor: pointer;
+ }
+ 
+ .navigation-header {
+     display: inline-block;
+ }
+ 
+ .messages {
+     font-family: monospace;
+     border-style: double;
+     border-color: darkslateblue;
+     position: fixed;
+     top: 0px;
+     left: 250px;
+     width: 82%;
+     height: 100%;
+     background-color: rgba(100, 5, 200, .10);
+     z-index: 2;
+     overflow: scroll;
+ }
+ .messages-body{
+     padding-left: 20px;
+ }
+ .messages-body .username {
+     font-weight: bold;
+ }
+ 
+ .messages-body .timestamp {
+     float: right;
+     padding-right: 50px;
+ }
+ 
+ .messages-body .username .timestamp {
+     display: inline-block;
+ }
+ 
+ .messages-body .user-message {
+     padding-top: 5px;
+     padding-bottom: 5px;
+     display: inline-block;
+ }
+ 
+ .message-field {
+     bottom: 0;
+     padding-bottom: 5px;
+     position: fixed;
+ }
+ 
+ .message-box {
+     width: 900px;
+ } 
 
