--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -1,52 +1,24 @@
 <div class="navigation">
-    <div class="navigation-header">
-        <h3 class="navigation-title">Messenger</h3>
-    </div>
-    
-            <button class="btn-new" type="button" ng-click="room.newRoom()" >Add room</button>
-    
-    
- 
-
-
-<!--
-    <h3 class="modal-title">Login</h3>
-        <input placeholder="Enter a username" type="text">   
-    
-    <div class="btn">
-        <button class="btn-new" type="button" >Create user</button>
-    </div>
-    <div class="btn">
-        <button class="btn-new" type="button" >Login</button>
-    </div>
-    
-</div>
-
-
-
-<section class="modal-box">
-    <div class="modal-header">
-        <h3 class="modal-title">Create new room</h3>
-    </div>
-    <div class="modal-body">
-       
-        <input type="text" id="roomName" placeholder="Enter a room name">
-        
-    </div>
-    <div class="modal-footer">
-        <button class="btn-cancel" type="button" >Cancel</button>
-        <button class="btn-new" type="button" >Create room</button>
-    </div>
-            <button type="button" class="new-room" >New Room</button>
-</section>
--->
-
-<div class="chatbox">
+     <div class="navigation-header">
+         <h3 class="navigation-title">Messenger</h3>
+         <span>
+             <button type="button" class="new-room" ng-click="room.newRoom()">New Room</button>
+         </span>    
+     </div>
+     <div class="chatbox">
 
     <div ng-repeat="room in messenger.rooms">{{ room.$value }}</div>
 
 </div>
-    
-     
-</div>  
+ </div>
 
+
+<div class="messages">
+    <div class="messages-header">
+        <h3>{{ room.currentRoom.$value }}</h3>
+    </div>
+    <div class="messages-body" ng-repeat="message in room.messages">
+        <div class="username">{{ message.username }}</div>
+        <div class="timestamp">{{ message.sentAt }}</div>
+        <div class="user-message">{{ message.content }}</div>
+    </div>
