--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -1,9 +1,12 @@
-</div>
-      <div class="modal-body">
-          <h5 class="modal-prompt">Enter a room name</h5>
-             <input type="text" id="roomName">
-      </div>
-      <div class="modal-footer">
-         <button class="btn-cancel" type="button" ng-click="modal.close()">Cancel</button>
-          <button class="btn-new" type="button" ng-click="modal.createRoom()">Create room</button>
-      </div>
+<div ng-controller="ModalCtrl as modal">
+     <div>
+         <h3>Create new room</h3>
+     </div>
+     <div>
+         <form ng-submit="modal.createRoom(newRoomName)">
+             <input ng-model="newRoomName"/>
+             <button type="submit">Create Room</button>
+             <button type="button" ng-click="modal.cancel()">Cancel</button>
+         </form>
+     </div>
+ </div> 
