signin firebase auth

--- a/app/styles/messenger.css
+++ b/app/styles/messenger.css
@@ -1,3 +1,4 @@
+/*
 .navigation {
      border-style: double;
      border-color: darkslategrey;
@@ -75,4 +76,5 @@ font-size: 3rem;
 .room-name {
 cursor: pointer;
 }
+*/
 
