--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -5,8 +5,8 @@
      <div>
          <form ng-submit="modal.createRoom(newRoomName)">
              <input ng-model="newRoomName"/>
-             <button type="submit">Create Room</button>
-             <button type="button" ng-click="modal.cancel()">Cancel</button>
+             <button type="submit" ng-click="create()">Create Room</button>
+             <button type="button" ng-click="cancel()">Cancel</button>
          </form>
      </div>
  </div> 
