--- a/app/templates/usernameModal.html
+++ b/app/templates/usernameModal.html
@@ -1,8 +1,8 @@
 <div class="container">
     <form name="usernameForm" ng-submit="modal.setCurrentUser(username)">
         <h3 class="form-sigin-heading">Set Username</h3>
-        <p>This name will appear when you send messages</p>
-        <input name="username" ng-model="username" required autofocus/>
+        <p>This is your messenger name</p>
+        <input name="username" ng-model="username" required/>
         <button class="btn btn-primary" type="submit">Set Username</button>
     </form>
 </div>
